examples/test/testpolicy12489.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12489
  namespace: namespace377
spec:
  podSelector:
    matchLabels:
      key39: value24
      key37: value9
      key21: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value38
      podSelector:
        matchLabels:
          key8: value41
          key13: value14
